teste de parametros no server